tests/negative/Internal/WrongType.juvix
module WrongType;

type A :=
  | a : A;

type B :=
  | b : B;

f : A;
f := b;
